v3.0. Port to 1.19.2. Should fix issues with ordered loading on Fabric. Dep YAPI 3.8.0.