@@ -2,7 +2,9 @@ package com.yungnickyoung.minecraft.paxi.mixin;
 
 import com.google.common.base.Functions;
 import com.google.common.collect.ImmutableList;
-import com.yungnickyoung.minecraft.paxi.PaxiFileResourcePackProvider;
+import com.yungnickyoung.minecraft.paxi.PaxiRepositorySource;
+import com.yungnickyoung.minecraft.paxi.util.IPaxiSourceProvider;
+import net.fabricmc.fabric.impl.resource.loader.ModResourcePackCreator;
 import net.minecraft.server.packs.repository.Pack;
 import net.minecraft.server.packs.repository.PackRepository;
 import net.minecraft.server.packs.repository.RepositorySource;
@@ -18,12 +20,12 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
- * Overwrites the vanilla method for building a list of enabled resource packs.
+ * Overwrites the vanilla method for building a list of enabled packs.
  * Should completely preserve vanilla behavior while adding Paxi packs separately in a specific order
  * as determined by the user's datapack_load_order.json.
  */
 @Mixin(PackRepository.class)
-public abstract class MixinResourcePackManager {
+public abstract class MixinPackRepository {
     @Shadow
     private Map<String, Pack> available;
 
@@ -38,8 +40,15 @@ public abstract class MixinResourcePackManager {
 
     @Inject(at=@At("HEAD"), method="rebuildSelected", cancellable = true)
     private void buildEnabledProfiles(Collection<String> enabledNames, CallbackInfoReturnable<List<Pack>> cir) {
-        // Fetch Paxi pack provider
-        Optional<RepositorySource> paxiProvider = this.sources.stream().filter(provider -> provider instanceof PaxiFileResourcePackProvider).findFirst();
+        // Fetch Paxi pack repository source
+        Optional<ModResourcePackCreator> moddedPackRepositorySource = this.sources.stream()
+                .filter(provider -> provider instanceof ModResourcePackCreator)
+                .findFirst()
+                .map(repositorySource -> (ModResourcePackCreator) repositorySource);
+        Optional<RepositorySource> paxiRepositorySource = Optional.empty();
+        if (moddedPackRepositorySource.isPresent()) {
+            paxiRepositorySource = Optional.of(((IPaxiSourceProvider) moddedPackRepositorySource.get()).getPaxiSource());
+        }
 
         // List of all packs to be marked as enabled
         List<Pack> allEnabledPacks = this.getAvailablePacks(enabledNames).collect(Collectors.toList());
@@ -47,26 +56,27 @@ public abstract class MixinResourcePackManager {
         // List of all packs loaded by Paxi
         List<Pack> paxiPacks = new ArrayList<>();
 
-        // Grab a list of all Paxi packs from the Paxi provider, if it exists.
+        // Grab a list of all Paxi packs from the Paxi repo source, if it exists.
         // We must gather Paxi packs separately because vanilla uses a TreeMap to store all packs, so they are
         // stored lexicographically, but for Paxi we need them to be enabled in a specific order
         // (determined by the user's datapack_load_order.json)
-        if (paxiProvider.isPresent() && ((PaxiFileResourcePackProvider)paxiProvider.get()).orderedPaxiPacks.size() > 0) {
-            paxiPacks = this.getAvailablePacks(((PaxiFileResourcePackProvider)paxiProvider.get()).orderedPaxiPacks).collect(Collectors.toList());
+        if (paxiRepositorySource.isPresent() && ((PaxiRepositorySource)paxiRepositorySource.get()).hasPacks()) {
+            paxiPacks.addAll(this.getAvailablePacks(((PaxiRepositorySource) paxiRepositorySource.get()).unorderedPaxiPacks).toList());
+            paxiPacks.addAll(this.getAvailablePacks(((PaxiRepositorySource) paxiRepositorySource.get()).orderedPaxiPacks).toList());
             allEnabledPacks.removeAll(paxiPacks);
         }
 
         // Register all Paxi packs
-        for (Pack resourcePackProfile : paxiPacks) {
-            if (resourcePackProfile.isRequired() && !allEnabledPacks.contains(resourcePackProfile)) {
-                resourcePackProfile.getDefaultPosition().insert(allEnabledPacks, resourcePackProfile, Functions.identity(), false);
+        for (Pack pack : paxiPacks) {
+            if (pack.isRequired() && !allEnabledPacks.contains(pack)) {
+                pack.getDefaultPosition().insert(allEnabledPacks, pack, Functions.identity(), false);
             }
         }
 
         // Register all other packs (lexicographical order)
-        for (Pack resourcePackProfile : this.available.values()) {
-            if (resourcePackProfile.isRequired() && !allEnabledPacks.contains(resourcePackProfile)) {
-                resourcePackProfile.getDefaultPosition().insert(allEnabledPacks, resourcePackProfile, Functions.identity(), false);
+        for (Pack pack : this.available.values()) {
+            if (pack.isRequired() && !allEnabledPacks.contains(pack)) {
+                pack.getDefaultPosition().insert(allEnabledPacks, pack, Functions.identity(), false);
             }
         }
 
